tests/contract_testcases/polkadot/errors/custom_error_01.sol
error Unauthorized();

contract VendingMachine {
    function withdraw() public pure {
        revert Unauthorized();
    }
}

// ---- Expect: diagnostics ----
